# marketplace

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
docs/: main.md
src/: main.py
src/configs/: settings.py  urls.py
src/domain/: entities.py  repositories.py
src/infra/: auth.py  database.py
src/infra/repo/: user.py
src/presentation/: routers.py
src/presentation/api/: auth_login.py
test/: database.py
