[tool.poetry]
name = "marketplace"
version = "0.1.0"
description = "Main app for marketplace sallers"
authors = ["plat01 <fplatoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
motor = "^3.6.0"
fastapi = "^0.115.4"
pydantic-settings = "^2.6.1"
authlib = "^1.3.2"
beanie = "^1.27.0"
itsdangerous = "^2.2.0"
httpx = "^0.28.0"
pydantic-extra-types = "^2.10.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
